Resolve overflow errors

--- a/styles/scss/abstracts/_reset.scss
+++ b/styles/scss/abstracts/_reset.scss
@@ -5,6 +5,10 @@ html {
   scroll-behavior: smooth;
 }
 
+#__next {
+  overflow: hidden;
+}
+
 /* Box sizing rules */
 *,
 *::before,
